<resources>
    <string name="app_name">Kotlin Material Design 1.0</string>
    <string name="pod_description">Photo of the day</string>
    <string name="error_server_msg">Server Error</string>
    <string name="error_request_msg">Request Error</string>
    <string name="error_msg">Error</string>
    <string name="reload_msg">Reload</string>
    <string name="error_empty_url_msg">Empty URL</string>
    <string name="search_wiki">Find in Wiki</string>
    <string name="wiki_helper_text">Try to find in Wiki</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_fab">FAB</string>
    <string name="action_favourite">Favourite</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_type_title">Theme</string>
    <string name="settings_type_purple">Purple</string>
    <string name="settings_type_teal">Teal</string>
    <string name="settings_button_apply">Apply</string>
</resources>