<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pod_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".view.pod.PODFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        android:text="@string/pod_description"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <HorizontalScrollView
                android:id="@+id/day_chip_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/wiki_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/day_chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="15dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/today_chip"
                        style="@style/ChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/yesterday_chip"
                        style="@style/ChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/day_before_yesterday_chip"
                        style="@style/ChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_before_yesterday" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wiki_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/pod_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wiki_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <dyachenko.kotlinmaterialdesign.util.EquilateralImageView
                android:id="@+id/pod_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/pod_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/pod_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?attr/colorPrimary" />
    </FrameLayout>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="?attr/colorPrimary"
        app:fabAlignmentMode="end"
        app:fabCradleRoundedCornerRadius="25dp"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="?attr/colorPrimary"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>